chore: update actors for film
